[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lummios"
version = "0.1.0"
description = "Cliente Python para a API Lummios Developer — dados fundamentalistas da B3/CVM"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Lummios" }]
keywords = ["b3", "cvm", "bovespa", "acoes", "fundamentos", "investimentos", "finance", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://developers.lummios.com.br"
Documentation = "https://developers.lummios.com.br/docs.html"
"Data Sheet" = "https://developers.lummios.com.br/dataset.html"
Repository = "https://github.com/brownbr84/lummios-python"
Issues = "https://github.com/brownbr84/lummios-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["lummios"]
